; ModuleID = '/home/carl/AnghaBench/nanomsg/src/utils/extr_msg.c_nn_msg_replace_body.c'
source_filename = "/home/carl/AnghaBench/nanomsg/src/utils/extr_msg.c_nn_msg_replace_body.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nn_msg = type { %struct.nn_chunkref }
%struct.nn_chunkref = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nn_msg_replace_body(%struct.nn_msg* %0, i32 %1) #0 {
  %3 = alloca %struct.nn_chunkref, align 4
  %4 = alloca %struct.nn_msg*, align 8
  %5 = getelementptr inbounds %struct.nn_chunkref, %struct.nn_chunkref* %3, i32 0, i32 0
  store i32 %1, i32* %5, align 4
  store %struct.nn_msg* %0, %struct.nn_msg** %4, align 8
  %6 = load %struct.nn_msg*, %struct.nn_msg** %4, align 8
  %7 = getelementptr inbounds %struct.nn_msg, %struct.nn_msg* %6, i32 0, i32 0
  %8 = call i32 @nn_chunkref_term(%struct.nn_chunkref* %7)
  %9 = load %struct.nn_msg*, %struct.nn_msg** %4, align 8
  %10 = getelementptr inbounds %struct.nn_msg, %struct.nn_msg* %9, i32 0, i32 0
  %11 = bitcast %struct.nn_chunkref* %10 to i8*
  %12 = bitcast %struct.nn_chunkref* %3 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %11, i8* align 4 %12, i64 4, i1 false)
  ret void
}

declare dso_local i32 @nn_chunkref_term(%struct.nn_chunkref*) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
